--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <section class="hp">
           <h3 class="emphasis_design20"><span>Website</span></h3>
             <div class="container">
-              <div class="item01">
+              <div class="item01 box-design8">
                 <img src="images/iphonemockup2.png" alt="iphone">
               </div>               
-              <div class="item02">
+              <div class="item02 box-design8">
                 <img src="images/desktopmock.png" alt="desktop">
               </div>
             </div>  
@@ -69,27 +69,27 @@
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
          <div class="gallery">
-            <div class="gallery01">
+            <div class="gallery01 box-design8">
                 <img src="images/さくらもち1.png" alt="桜餅">
                 <p>和菓子屋さんのさくらもち新発売の広告バナー【架空】</p>
             </div>
-            <div class="gallery02">
+            <div class="gallery02 box-design8">
                 <img src="images/nisa.png" alt="nisa">
                 <p>若年層ファミリーに対して新NISAのセミナー告知バナー【架空】</p>
             </div>
-            <div class="gallery03">
+            <div class="gallery03 box-design8">
                  <img src="images/睡眠.jpg" alt="眠り">
                  <p>睡眠に関する様々なサービスを訴求するお題のバナー作成【コンペ作品】</p>
             </div>
-            <div class="gallery04">
+            <div class="gallery04 box-design8">
                 <img src="images/春読書.png" alt="春読書">
                 <p>市町村の図書館主催の春の読書週間バナー【架空】</p>
             </div>
-            <div class="gallery05">
+            <div class="gallery05 box-design8">
                 <img src="images/在宅ワーク.png" alt="在宅">
                 <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー【架空】</p>
             </div>
-            <div class="gallery06">
+            <div class="gallery06 box-design8">
                 <img src="images/ふぁむぱーく.jpg" alt="ふぁむぱーく">
                 <p>新規オープンするファミリー向け施設がお題のバナー【コンペ作品】</p>
             </div>
