--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="miki">
             <div class="miki01">
             <figure>
-             <img src="images/albilex.png" alt="miki">
+             <img src="images/albilex.jpg" alt="miki">
             </figure>  
             </div>
             <div class="miki02">
