--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             現在、旦那さんと小学生の娘と3人暮らし<br>
             家族との時間をもっと大事に暮らしたいと考え<br>
             webデザインの勉強を始める<br>
+            現在コーダー目指して奮闘中！<br>
             <br>
             趣味:<br>
             娘と地元サッカーチームのアルビレックス新潟の観戦⚽️🏟️<br>
@@ -57,6 +58,9 @@
         </section>
         <section class="hp">
           <h3 class="emphasis_design20"><span>Website</span></h3>
+            <p>レスポンシブ対応いたします<br>
+                コーディングだけやってほしい！などのお仕事も大歓迎です<br>
+                《ただいまお試し価格で承ります》</p>
             <div class="container">
               <div class="item01 box-design8">
                 <img src="images/iphonemockup2.png" alt="iphone">
@@ -68,7 +72,9 @@
         </section>
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
-         <div class="gallery">
+         <p>お客様の心に届くバナーお作りします<br>
+        《1枚1500円にて承ります》</p>
+            <div class="gallery">
             <div class="gallery01 box-design8">
                 <img src="images/さくらもち1.png" alt="桜餅">
                 <p>和菓子屋さんのさくらもち新発売の広告バナー【架空】</p>
