--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
              <img src="images/miki.design.png" alt="rogo">
             </div>
             <div class="logo02">
-             <p>皆さんの暮らしに溢れている情報<br>
+             <p>暮らしに溢れている情報<br>
                 様々なデザイン<br>
                 心を動かすもの<br>
-                私のデザインで誰かの心が少しでも弾みますように<br>
+                私のデザインで誰かの心が<br>
+                少しでも弾みますように<br>
              </p>
             </div>
         </div>
