--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
     <aside>
         <h3 class="emphasis_design20"><span>Contact</span></h3>
           <div class="contact">
+              <p>お仕事のご依頼はこちらからお願いいたします
+              </p>
             <a href="mailto:miki.198467@gmail.com">
              <div class="contact01"><img src="images/mail_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.png" alt=""></div>
             </a>
