--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
     <aside>
         <h3 class="emphasis_design20"><span>Contact</span></h3>
-        <p>お仕事のご依頼はこちらからお願いいたします</p>  
+        <p>お仕事のご依頼はこちらから</p>  
         <div class="contact">
               <a href="mailto:miki.198467@gmail.com">
              <div class="contact01"><img src="images/mail_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.png" alt=""></div>
