--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <section class="wave1">
-        <h1>Portforio</h1>
+        <h1>Portfolio</h1>
       </section>
       <h2>miki.design367</h2>
         <div class="logo">
