--- a/index.html
+++ b/index.html
@@ -39,20 +39,19 @@
             </figure>  
             </div>
             <div class="miki02">
-            新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)<br>
-            高校卒業後、千葉県へ家族で移住<br>
-            化粧品販売会社、モバイル販売会社などに就く<br>
-            結婚を機に新潟県下越地方へ<br>
-            娘が産まれ、医療事務をしながらワンオペ育児を楽しむ<br>
-            現在、旦那さんと小学生の娘と3人暮らし<br>
-            家族との時間をもっと大事に暮らしたいと考え<br>
-            webデザインの勉強を始める<br>
+            新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
+            高校卒業後、千葉県へ家族で移住。
+            化粧品販売会社、モバイル販売会社などに就く。
+            結婚を機に新潟県下越地方へ。
+            娘が産まれ、医療事務をしながらワンオペ育児を楽しむ。
+            現在、旦那さんと小学生の娘と3人暮らし。
+            家族との時間をもっと大事に暮らしたいと考え、webデザインの勉強を始める。
             現在コーダー目指して奮闘中！<br>
             <br>
             趣味:<br>
-            娘と地元サッカーチームのアルビレックス新潟の観戦⚽️🏟️<br>
-            ガーデニング🌷庭は無いのでプランターでお花を沢山植えてます😊<br>
-            昨年から家計管理に注力中！FPの資格勉強中です👛<br>
+            ・娘と地元サッカーチームのアルビレックス新潟の観戦⚽️🏟️<br>
+            ・ガーデニング🌷庭は無いのでプランターでお花を沢山植えてます😊<br>
+            ・昨年から家計管理に注力中！FPの資格勉強中です👛<br>
             </p>
             </div>
           </div> 
