--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <div class="miki">
             <div class="miki01">
             <figure>
-             <img src="images/albilex.jpg" alt="miki">
+             <img src="images/photo-003.jpg" alt="miki">
             </figure>  
             </div>
             <div class="miki02">
-            新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
+            <p>新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
             高校卒業後、千葉県へ家族で移住。
             化粧品販売会社、モバイル販売会社などに就く。
             結婚を機に新潟県下越地方へ。
