--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                  <p>睡眠に関する様々なサービスを訴求するお題のバナー作成【コンペ作品】</p>
             </div>
             <div class="gallery04 box-design8">
-                <img src="images/春読書.png" alt="春読書">
+                <img src="images/春の読書週間.jpg" alt="春読書">
                 <p>市町村の図書館主催の春の読書週間バナー【架空】</p>
             </div>
             <div class="gallery05 box-design8">
