--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>和菓子屋さんのさくらもち新発売の広告バナー【架空】</p>
             </div>
             <div class="gallery02 box-design8">
-                <img src="images/nisa.png" alt="nisa">
+                <img src="images/NISA始めよう.jpg" alt="nisa">
                 <p>若年層ファミリーに対して新NISAのセミナー告知バナー【架空】</p>
             </div>
             <div class="gallery03 box-design8">
@@ -92,7 +92,7 @@
                 <p>市町村の図書館主催の春の読書週間バナー【架空】</p>
             </div>
             <div class="gallery05 box-design8">
-                <img src="images/在宅ワーク.png" alt="在宅">
+                <img src="images/Webデザイナーになる.jpg" alt="在宅">
                 <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー【架空】</p>
             </div>
             <div class="gallery06 box-design8">
