--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>若年層ファミリーに対して新NISAのセミナー告知バナー【架空】</p>
             </div>
             <div class="gallery03 box-design8">
-                 <img src="images/眠りのバナー.jpg" alt="眠り">
+                 <img src="images/眠りのバナー.jpg" alt="眠り">
                  <p>睡眠に関する様々なサービスを訴求するお題のバナー作成【コンペ作品】</p>
             </div>
             <div class="gallery04 box-design8">
