--- a/index.html
+++ b/index.html
@@ -58,17 +58,29 @@
         </section>
         <section class="hp">
           <h3 class="emphasis_design20"><span>Website</span></h3>
-            <p>レスポンシブ対応いたします<br>
-                コーディングだけやってほしい！などのお仕事も大歓迎です<br>
-                《ただいまお試し価格で承ります》</p>
-            <div class="container">
+          <p>レスポンシブ対応いたします<br>
+            コーディングだけやってほしい！などのお仕事も大歓迎です<br>
+          《ただいまお試し価格で承ります》</p>
+            <div class="container1">
               <div class="item01 box-design8">
                 <img src="images/iphonemockup2.png" alt="iphone">
               </div>               
               <div class="item02 box-design8">
                 <img src="images/desktopmock.png" alt="desktop">
               </div>
+            </div> 
+            <p>こちらから実際にご覧いただけます</p>
+            <p><a href="https://miki-design367.github.io/BlueCoffee/">more</a></p> 
+            <div class="container2">  
+              <div class="item03 box-design8">
+                <img src="images/花器スマホ.jpg" alt="花器スマホ">
+              </div>               
+              <div class="item04 box-design8">
+                <img src="images/花器PC.jpg" alt="花器スマホ">
+              </div>
             </div>  
+            <p>こちらから実際にご覧いただけます</p>
+            <p><a href="https://miki-design367.github.io/vaseshop/">more</a></p> 
         </section>
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
