--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img src="images/花器スマホ.jpg" alt="花器スマホ">
               </div>               
               <div class="item04 box-design8">
-                <img src="images/花器PC.jpg" alt="花器PC">
+                <img src="images/花器デスクトップ.jpg" alt="花器PC">
               </div>
             </div>  
             <p>こちらから実際にご覧いただけます</p>
