--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <img src="images/desktopmock.png" alt="desktop">
               </div>
             </div> 
+            <p>【架空】カフェ/BLUE COFFEE<br>
+              落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
+            使用ツール:HTML/CSS/JavaScript</p>
             <p>こちらから実際にご覧いただけます</p>
             <p><a href="https://miki-design367.github.io/BlueCoffee/">more</a></p> 
             <div class="container2">  
@@ -78,7 +81,10 @@
               <div class="item04 box-design8">
                 <img src="images/花器デスクトップ.jpg" alt="花器PC">
               </div>
-            </div>  
+            </div> 
+            <p>【架空】花器専門店/Vase&Co.<br>
+              上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
+            使用ツール:HTML/CSS</p>
             <p>こちらから実際にご覧いただけます</p>
             <p><a href="https://miki-design367.github.io/vaseshop/">more</a></p> 
         </section>
