--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@
             </div>
             <div class="miki02">
             <p>新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
-            高校卒業後、千葉県へ家族で移住。
+            高校卒業後、千葉県へ移住。
             化粧品販売会社、モバイル販売会社などに就く。
-            結婚を機に新潟県下越地方へ。
-            娘が産まれ、医療事務をしながらワンオペ育児を楽しむ。
-            現在、旦那さんと小学生の娘と3人暮らし。
-            家族との時間をもっと大事に暮らしたいと考え、webデザインの勉強を始める。
+            結婚を機に新潟県下越地方へ。総合病院の医療事務に就く。
+            退職し、現在専業主婦。旦那さんと小学生の娘と3人暮らし。
+            今後を考えた時に、家族との時間をもっと大事に暮らしたいと考え、webデザインの勉強を始める。
             <br>
             <br>
             趣味:<br>
             ・娘と地元サッカーチームのアルビレックス新潟の観戦⚽️🏟️<br>
-            ・ガーデニング🌷庭は無いのでプランターでお花を沢山植えてます😊<br>
-            ・昨年から家計管理に注力中！FPの資格勉強中です👛<br>
+            ・ガーデニング🌷プランターでお花を沢山植えてます😊<br>
+            ・昨年から家計管理に注力中！FPの資格勉強中👛<br>
             </p>
             </div>
           </div> 
