--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img src="images/花器スマホ.jpg" alt="花器スマホ">
               </div>               
               <div class="item04 box-design8">
-                <img src="images/花器デスクトップ.jpg" alt="花器デスクトップ">
+                <img src="images/vasedesktop.jpg" alt="花器デスクトップ">
               </div>
             </div> 
             <p>【架空】花器専門店/Vase&Co.<br>
