--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
             使用ツール:HTML/CSS/JavaScript</p>
             <p>こちらから実際にご覧いただけます</p>
-            <p><a href="https://miki-design367.github.io/BlueCoffee/">more</a></p> 
+            <p><a href="https://miki-design367.github.io/BlueCoffee/">More</a></p> 
             <div class="container2">  
               <div class="item03 box-design8">
                 <img src="images/花器スマホ.jpg" alt="花器スマホ">
@@ -85,7 +85,7 @@
               上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
             使用ツール:HTML/CSS</p>
             <p>こちらから実際にご覧いただけます</p>
-            <p><a href="https://miki-design367.github.io/vaseshop/">more</a></p> 
+            <p><a href="https://miki-design367.github.io/vaseshop/">More</a></p> 
         </section>
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
