--- a/index.html
+++ b/index.html
@@ -70,22 +70,23 @@
             </div> 
             <p>【架空】カフェ/BLUE COFFEE<br>
               落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
-            使用ツール:HTML/CSS/JavaScript</p>
-            <p>こちらから実際にご覧いただけます</p>
-            <p><a href="https://miki-design367.github.io/BlueCoffee/">More</a></p> 
+              使用ツール:HTML/CSS/JavaScript<br>
+              こちらから実際にご覧いただけます<br>
+               <a href="https://miki-design367.github.io/BlueCoffee/">More</a></p> 
+            </div> 
             <div class="container2">  
               <div class="item03 box-design8">
                 <img src="images/花器スマホ.jpg" alt="花器スマホ">
               </div>               
               <div class="item04 box-design8">
-                <img src="images/vasedesktop.jpg" alt="花器デスクトップ">
+                <img src="images/vasedesktop.jpg" alt="花器PC">
               </div>
-            </div> 
-            <p>【架空】花器専門店/Vase&Co.<br>
-              上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
-            使用ツール:HTML/CSS</p>
-            <p>こちらから実際にご覧いただけます</p>
-            <p><a href="https://miki-design367.github.io/vaseshop/">More</a></p> 
+               <p>【架空】花器専門店/Vase&Co.<br>
+                上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
+                使用ツール:HTML/CSS<br>
+                こちらから実際にご覧いただけます<br>
+                <a href="https://miki-design367.github.io/vaseshop/">More</a></p> 
+            </div>
         </section>
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
