--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
              <div class="contact02"><img src="images/logo-black.png" alt=""></div>
             </a>
           </div>
+        <p>最後までご覧いただきありがとうございます</p>
     </aside>
     <footer>
       <section class="wave2">
