--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="item02 box-design8">
                 <img src="images/desktopmock.png" alt="desktop">
               </div> 
-              <p>【架空】カフェ/BLUE COFFEE<br>
+              <p>カフェ/BLUE COFFEE【自主制作】<br>
               落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
               使用ツール:HTML/CSS/JavaScript<br>
               こちらから実際にご覧いただけます<br>
@@ -80,7 +80,7 @@
               <div class="item04 box-design8">
                 <img src="images/vasedesktop.jpg" alt="花器PC">
               </div>
-               <p>【架空】花器専門店/Vase&Co.<br>
+               <p>花器専門店/Vase&Co.【自主制作】<br>
                 上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
                 使用ツール:HTML/CSS<br>
                 こちらから実際にご覧いただけます<br>
@@ -89,32 +89,32 @@
         </section>
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
-         <p>お客様の心に届くバナーお作りします<br>
+         <p>印象に残るバナー作成いたします<br>
         《1枚1500円にて承ります》</p>
             <div class="gallery">
             <div class="gallery01 box-design8">
                 <img src="images/さくらもち1.png" alt="桜餅">
-                <p>和菓子屋さんのさくらもち新発売の広告バナー【架空】</p>
+                <p>和菓子屋さんのさくらもち新発売広告【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery02 box-design8">
                 <img src="images/NISA始めよう.jpg" alt="nisa">
-                <p>若年層ファミリーに対して新NISAのセミナー告知バナー【架空】</p>
+                <p>若年層ファミリーに対して新NISAのセミナー告知バナー【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery03 box-design8">
                  <img src="images/眠りのバナー.jpg" alt="眠り">
-                 <p>睡眠に関する様々なサービスを訴求するお題のバナー作成【コンペ作品】</p>
+                 <p>睡眠に関するサービスを訴求/Instagram用【コンペ作品】使用ツール/Photoshop</p>
             </div>
             <div class="gallery04 box-design8">
                 <img src="images/春の読書週間.jpg" alt="春読書">
-                <p>市町村の図書館主催の春の読書週間バナー【架空】</p>
+                <p>市町村の図書館主催の春の読書週間バナー【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery05 box-design8">
                 <img src="images/Webデザイナーになる.jpg" alt="在宅">
-                <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー【架空】</p>
+                <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery06 box-design8">
                 <img src="images/ふぁむぱーく.jpg" alt="ふぁむぱーく">
-                <p>新規オープンするファミリー向け施設がお題のバナー【コンペ作品】</p>
+                <p>新規オープンするファミリー向け施設バナー【コンペ作品】使用ツール/Photoshop</p>
             </div>
          </div>
         </section>
