--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
              <img src="images/miki.design.png" alt="rogo">
             </div>
             <div class="logo02">
-             <p>暮らしに溢れている情報<br>
-                様々なデザイン<br>
-                心を動かすもの<br>
-                私のデザインで誰かの心が<br>
-                少しでも弾みますように<br>
+             <p><strong>暮らしにあふれる情報<br>
+　　　　　　　　　　多彩なデザイン<br>
+　　　　　　　　　　心を動かすもの</strong><br>
+                 <br>
+　　　　　　　　　　私のデザインが、誰かの心を<br>
+　　　　　　　　　　ほんの少しでも弾ませることができますように。
              </p>
             </div>
         </div>
