--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             </figure>  
             </div>
             <div class="miki02">
-            <p>新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
-            高校卒業後、千葉県へ移住。
-            化粧品販売会社、モバイル販売会社などに就く。
+            <p>1984年新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
+            高校卒業後、千葉県へ移住。化粧品販売会社、モバイル販売会社などに就く。
             結婚を機に新潟県下越地方へ。総合病院の医療事務に就く。
-            退職し、現在専業主婦。旦那さんと小学生の娘と3人暮らし。
-            今後を考えた時に、家族との時間をもっと大事に暮らしたいと考え、webデザインの勉強を始める。
+            娘が入学した年に退職し、現在専業主婦。旦那さんと小学生の娘と3人暮らし。
+            人と人との繋がりを大切に
             <br>
             <br>
             趣味:<br>
