--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             高校卒業後、千葉県へ移住。化粧品販売会社、モバイル販売会社などに就く。
             結婚を機に新潟県下越地方へ。総合病院の医療事務に就く。
             娘が入学した年に退職し、現在専業主婦。旦那さんと小学生の娘と3人暮らし。
-            人と人との繋がりを大切に
+            人と人との繋がりを大切にし、丁寧かつ迅速な対応を心がけています。
+            依頼者様に気持ちよくやり取りしていただけるよう、誠意を込めて対応いたします。
             <br>
             <br>
             趣味:<br>
