--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
             </div>
             <div class="logo02">
              <p><strong>暮らしにあふれる情報<br>
-　　　　　　　　　　多彩なデザイン<br>
-　　　　　　　　　　心を動かすもの</strong><br>
-                 <br>
-　　　　　　　　　　私のデザインが、誰かの心を<br>
-　　　　　　　　　　ほんの少しでも弾ませることができますように。
+                 多彩なデザイン<br>
+                 心を動かすもの</strong><br>
+                 <br>私のデザインが、誰かの心を<br>ほんの少しでも弾ませることができますように。
              </p>
             </div>
         </div>
