--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
              <img src="images/miki.design.png" alt="rogo">
             </div>
             <div class="logo02">
-             <p><strong>暮らしにあふれる情報<br>
-                 多彩なデザイン<br>
-                 心を動かすもの</strong><br>
+             <p><strong>暮らしにあふれる情報<br>多彩なデザイン<br>心を動かすもの</strong><br>
                  <br>私のデザインが、誰かの心を<br>ほんの少しでも弾ませることができますように。
              </p>
             </div>
