--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
             </figure>  
             </div>
             <div class="miki02">
-            <p>1984年新潟県生まれ、高校卒業まで上越地方で育つ(長野県の県境)
-            高校卒業後、千葉県へ移住。化粧品販売会社、モバイル販売会社などに就く。
-            結婚を機に新潟県下越地方へ。総合病院の医療事務に就く。
-            娘が入学した年に退職し、現在専業主婦。旦那さんと小学生の娘と3人暮らし。
-            人と人との繋がりを大切にし、丁寧かつ迅速な対応を心がけています。
-            依頼者様に気持ちよくやり取りしていただけるよう、誠意を込めて対応いたします。
-            <br>
+            <p>1984年、新潟県生まれ。高校卒業まで上越地方（長野県の県境）で育ちました。その後、千葉県へ移り、化粧品販売会社やモバイル販売会社などで勤務。
+                結婚を機に新潟県下越地方へ引っ越し、総合病院で医療事務の仕事に就きました。娘が小学校に入学したのを機に退職し、現在は専業主婦。<br>
+                夫と小学生の娘の3人で暮らしています。人と人との繋がりを大切にし、丁寧かつ迅速な対応を心がけています。<br>
+                依頼者様に気持ちよくやり取りしていただけるよう、誠意を込めて対応いたします。<br>
             <br>
             趣味:<br>
             ・娘と地元サッカーチームのアルビレックス新潟の観戦⚽️🏟️<br>
