--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <h3 class="emphasis_design20"><span>Website</span></h3>
           <p>レスポンシブ対応いたします<br>
             コーディングだけやってほしい！などのお仕事も大歓迎です<br>
-          《ただいまお試し価格で承ります》</p>
+          《下記のようなシングルページ10,000円で作成します》<br>
+          ページ追加、サーバー・ドメイン・管理費など、お客様のご要望に応じて別途お見積もりいたします。お気軽にご相談ください。<br>
+            お客様の目的やご要望に合わせて、最適なWebサイトを制作いたします。</p>
             <div class="container1">
               <div class="item01 box-design8">
                 <img src="images/iphonemockup2.png" alt="iphone">
