--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
         </section>
         <section class="hp">
           <h3 class="emphasis_design20"><span>Website</span></h3>
-          <p>レスポンシブ対応いたします<br>
-            コーディングだけやってほしい！などのお仕事も大歓迎です<br>
-          《下記のようなシングルページ10,000円で作成します》<br>
+          <p>お客様の目的やご要望に合わせて、最適なWebサイトを制作いたします。<br>
+          《下記のようなシングルページ10,000円》<br>
           ページ追加、サーバー・ドメイン・管理費など、お客様のご要望に応じて別途お見積もりいたします。お気軽にご相談ください。<br>
-            お客様の目的やご要望に合わせて、最適なWebサイトを制作いたします。</p>
+            </p>
             <div class="container1">
               <div class="item01 box-design8">
                 <img src="images/iphonemockup2.png" alt="iphone">
@@ -87,7 +86,7 @@
         <section class="banner">
          <h3 class="emphasis_design20"><span>Banner</span></h3>
          <p>印象に残るバナー作成いたします<br>
-        《1枚1500円にて承ります》</p>
+        《1枚1500円》</p>
             <div class="gallery">
             <div class="gallery01 box-design8">
                 <img src="images/さくらもち1.png" alt="桜餅">
