--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
           <h3 class="emphasis_design20"><span>Website</span></h3>
           <p>お客様の目的やご要望に合わせて、最適なWebサイトを制作いたします。<br>
           《下記のようなシングルページ10,000円》<br>
-          ページ追加、サーバー・ドメイン・管理費など、お客様のご要望に応じて別途お見積もりいたします。お気軽にご相談ください。<br>
+          ページ追加、サーバー・ドメイン・管理費など、お客様のご要望に応じて別途お見積もりいたします。<br>
+              お気軽にご相談ください。<br>
             </p>
             <div class="container1">
               <div class="item01 box-design8">
