--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>和菓子屋さんのさくらもち新発売広告【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery02 box-design8">
-                <img src="images/NISA始めよう.jpg" alt="nisa">
+                <img src="images/新NISA始めよう.jpg" alt="nisa">
                 <p>若年層ファミリーに対して新NISAのセミナー告知バナー【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery03 box-design8">
