--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="hp">
           <h3 class="emphasis_design20"><span>Website</span></h3>
           <p>お客様の目的やご要望に合わせて、最適なWebサイトを制作いたします。<br>
-          《下記のようなシングルページ10,000円》<br>
+          《下記のようなシングルページ10,000円〜》<br>
           ページ追加、サーバー・ドメイン・管理費など、お客様のご要望に応じて別途お見積もりいたします。<br>
               お気軽にご相談ください。<br>
             </p>
@@ -64,9 +64,11 @@
               <div class="item02 box-design8">
                 <img src="images/desktopmock.png" alt="desktop">
               </div> 
-              <p>カフェ/BLUE COFFEE【自主制作】<br>
-              落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
-              使用ツール:HTML/CSS/JavaScript<br>
+              <p>カフェ/BLUE COFFEE<br>
+                【自主制作】<br>
+              　　落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
+              　　《使用ツール》<br>
+                  HTML/CSS/JavaScript<br>
               こちらから実際にご覧いただけます<br>
                <a href="https://miki-design367.github.io/BlueCoffee/">More</a></p> 
             </div> 
@@ -77,10 +79,12 @@
               <div class="item04 box-design8">
                 <img src="images/vasedesktop.jpg" alt="花器PC">
               </div>
-               <p>花器専門店/Vase&Co.【自主制作】<br>
-                上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
-                使用ツール:HTML/CSS<br>
-                こちらから実際にご覧いただけます<br>
+               <p>花器専門店/Vase&Co.<br>
+                 【自主制作】<br>
+                  上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
+                 《使用ツール》<br>
+                  HTML/CSS<br>
+                  こちらから実際にご覧いただけます<br>
                 <a href="https://miki-design367.github.io/vaseshop/">More</a></p> 
             </div>
         </section>
@@ -91,11 +95,13 @@
             <div class="gallery">
             <div class="gallery01 box-design8">
                 <img src="images/さくらもち1.png" alt="桜餅">
-                <p>和菓子屋さんのさくらもち新発売広告【自主制作】使用ツール/Photoshop</p>
+                <p>和菓子屋さんのさくらもち新発売広告<br>
+                    【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery02 box-design8">
                 <img src="images/新NISA始めよう.jpg" alt="nisa">
-                <p>若年層ファミリーに対して新NISAのセミナー告知バナー【自主制作】使用ツール/Photoshop</p>
+                <p>若年層ファミリーに対して新NISAのセミナー告知バナー<br>
+                    【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery03 box-design8">
                  <img src="images/眠りのバナー.jpg" alt="眠り">
@@ -107,7 +113,8 @@
             </div>
             <div class="gallery05 box-design8">
                 <img src="images/Webデザイナーになる.jpg" alt="在宅">
-                <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー【自主制作】使用ツール/Photoshop</p>
+                <p>在宅ワーク希望の20〜30代女性向けスクール訴求バナー<br>
+                    【自主制作】使用ツール/Photoshop</p>
             </div>
             <div class="gallery06 box-design8">
                 <img src="images/ふぁむぱーく.jpg" alt="ふぁむぱーく">
