--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
               <div class="item02 box-design8">
                 <img src="images/desktopmock.png" alt="desktop">
               </div> 
-              <p>カフェ/BLUE COFFEE<br>
-                【自主制作】<br>
-              　　落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>
-              　　《使用ツール》<br>
-                  HTML/CSS/JavaScript<br>
+              <p>カフェ/BLUE COFFEE<br>【自主制作】<br>落ち着いた雰囲気のコーヒーショップをイメージして作成しました。<br>《使用ツール》<br>HTML/CSS/JavaScript<br>
               こちらから実際にご覧いただけます<br>
                <a href="https://miki-design367.github.io/BlueCoffee/">More</a></p> 
             </div> 
