--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
              <div class="contact02"><img src="images/logo-black.png" alt=""></div>
             </a>
           </div>
-        <p>最後までご覧いただきありがとうございます</p>
+        <p>最後までご覧いただき</p>
+        <div clss="fukidashi-01-12">
+           <div>ありがとうございます</div>
+        </div>     
     </aside>
     <footer>
       <section class="wave2">
