--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             </a>
           </div>
         <p>最後までご覧いただき</p>
-        <div clss="fukidashi-01-12">
-           <div>ありがとうございます</div>
-        </div>     
+        <div class="fukidashi-01-12">
+  　　　　<div>ありがとうございます</div>
+　　　　　</div>
     </aside>
     <footer>
       <section class="wave2">
