--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
              <div class="contact02"><img src="images/logo-black.png" alt=""></div>
             </a>
           </div>
-        <p>最後までご覧いただき</p>
-        <div class="fukidashi-01-12">
-  　　　　<div>ありがとうございます</div>
-　　　　　</div>
+         <div class="thankyou">
+          <div class="attention">
+            <p>最後までご覧いただき<br>ありがとうございます</p>
+          </div>
+        </div>  
     </aside>
     <footer>
       <section class="wave2">
