--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                   上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
                  《使用ツール》<br>
                   HTML/CSS<br>
-                  こちらから実際にご覧いただけます<br>
-                <a href="https://miki-design367.github.io/vaseshop/">More</a></p> 
+                  こちらから実際にご覧いただけます<br></p>
+            <div class="button">
+          　　　　　　<button><a href="https://miki-design367.github.io/vaseshop/">More</a></button> 
             </div>
         </section>
         <section class="banner">
