--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
                   上品で洗練されたイメージの店舗をイメージしたシンプルなホームページ<br>
                  《使用ツール》<br>
                   HTML/CSS<br>
-                  こちらから実際にご覧いただけます<br></p>
-            <div class="button">
-          　　　　　　<button><a href="https://miki-design367.github.io/vaseshop/">More</a></button> 
+                  こちらから実際にご覧いただけます<br>
+                  <a href="https://miki-design367.github.io/vaseshop/">More</a></p>
             </div>
         </section>
         <section class="banner">
